--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>CV3</title>
 </head>
 <body>
-    <img src="/Avatar.jpeg" alt="my photo">
+    <link rel="stylesheet" href="/style.css">
+    <img class="img" src="/Avatar.jpeg" alt="my photo">
 
 </body>
 </html>
