--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV3</title>
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/favicon.ico">
 </head>
 <body>
-    <link rel="stylesheet" href="/style.css">
-    <img class="img" src="/Avatar.jpeg" alt="my photo">
+    <img class="img" src="assets/Avatar.jpeg" alt="my photo"> 
 
 </body>
 </html>
+
