feat:add nav and main

--- a/index.html
+++ b/index.html
@@ -7,9 +7,50 @@
     <title>CV</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img class="img" src="assets/Avatar.jpeg" alt="my photo"> 
+    <header>
+        <div class="container">
+            <img class="img" src="assets/Avatar.jpeg" alt="my photo"> 
+            <p>Hello World! This is my CV</p>
+        </div>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="section" id="profile"></section>
+        <section class="section" id="contacts"></section>
+        <section class="section" id="summary"></section>
+        <section class="section" id="skills"></section>
+        <section class="section" id="code"></section>
+        <section class="section" id="courses"></section>
+        <section class="section" id="projects"></section>
+        <section class="section" id="education"></section>
+        <section class="section" id="english"></section>
+        <div class="container"></div>
+    </main>
+
+    <footer>
+        <div class="container"></div>
+    </footer>
+ 
+    
+
+    
 
 </body>
 </html>
