--- a/index.html
+++ b/index.html
@@ -14,34 +14,71 @@
 <body>
     <header>
         <div class="container">
-            <img class="img" src="assets/Avatar.jpeg" alt="my photo"> 
-            <p>Hello World! This is my CV</p>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
-                <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
-                <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-                <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
-        <section class="section" id="profile"></section>
-        <section class="section" id="contacts"></section>
-        <section class="section" id="summary"></section>
-        <section class="section" id="skills"></section>
-        <section class="section" id="code"></section>
-        <section class="section" id="courses"></section>
-        <section class="section" id="projects"></section>
-        <section class="section" id="education"></section>
-        <section class="section" id="english"></section>
-        <div class="container"></div>
+        <div class="container main-container">
+            <section class="section" id="profile">
+                <img class="img" src="assets/Avatar.jpeg" alt="my photo"> 
+                <h1 class="section-title">Pavel Putseika</h1>
+                <p>Frontend Developer</p>
+            </section>
+            <section class="section" id="contacts"><h2 class="section-title">Contacts</h2>
+            <ul>
+                <li class="li-contacts">Email: putseika.dev@gmail.com</li>
+                <li class="li-contacts">Github: putseika</li>
+                <li class="li-contacts">Telegram: @putseika</li>
+                <li class="li-contacts">Discord: putseika</li>
+            </ul>
+            </section>
+            <section class="section" id="summary"><h2 class="section-title">Summary</h2>
+                <p>I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me.
+                    I have completed several training projects and now I would like to take part in the creation of a real JavaScript project.
+                    My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects.
+                    I would like to work under the guidance of an experienced developer to gain practical experience.</p>
+            </section>
+            <section class="section" id="skills"><h2 class="section-title">Skills</h2>
+                <ul>
+                    <li class="li-skills">Web-development: HTML5, CSS3, JavaScript</li>
+                    <li class="li-skills">Frameworks and libraries: React</li>
+                    <li class="li-skills">Version control: GIT, Github</li>
+                    <li class="li-skills">Graphics: Figma</li>
+                </ul>
+            </section>
+            <section class="section" id="code"><h2 class="section-title">Code</h2>
+                <p>function factorial(n) {
+                    if(n < 0) return null;
+                    if (n <= 1) return 1;
+                    return n * factorial(n-1);
+                  }</p>
+            </section>
+            <section class="section" id="courses"><h2 class="section-title">Courses</h2>
+            <ul>
+                <li class="li-courses">Hexlet - JavaScript for beginner</li>
+                <li class="li-courses">LoftSchool - Comprehensive training JavaScript</li>
+                <li class="li-courses">Udemy - Web Development By Doing: HTML / CSS</li>
+                <li class="li-courses">Udemy - React + Redux - Professional Development</li>
+            </ul>
+            </section>
+            <section class="section" id="education"><h2 class="section-title">Education</h2>
+                <p>Belarus National Technical University</p>
+            </section>
+            <section class="section" id="english"><h2 class="section-title">English</h2>
+                <p>A1</p>
+            </section>
+        </div>
     </main>
 
     <footer>
